crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__up006_preview_with_fa100_and_future_annotations_py39.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP006 [*] Use `list` instead of `typing.List` for type annotation
 --> UP006_4.py:5:10
  |
5 | def f(x: typing.List[str]) -> None:
  |          ^^^^^^^^^^^
  |
help: Replace with `list`
2 | from typing import List
3 |
4 |
  - def f(x: typing.List[str]) -> None:
5 + def f(x: list[str]) -> None:
6 |     ...
7 |
8 |

UP006 [*] Use `list` instead of `List` for type annotation
 --> UP006_4.py:9:10
  |
9 | def g(x: List[str]) -> None:
  |          ^^^^
  |
help: Replace with `list`
6  |     ...
7  |
8  |
   - def g(x: List[str]) -> None:
9  + def g(x: list[str]) -> None:
10 |     ...
